--- a/index.html
+++ b/index.html
@@ -8,5 +8,12 @@
   </head>
   <body>
     <!-- Your code here -->
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"/>
+    <img src="https://images.hgmsites.net/hug/toyota-supra_100588921_h.jpg"
+          alt="supra"/>
+    <img src="https://cdn.carbuzz.com/gallery-images/1600/405000/900/405927.jpg"
+         alt="nissan"
+         title="twin turbo"
+    />     
   </body>
 </html>
